# Project-Handler

./: .dockerignore  .env  .env.example  .gitignore  .test.env  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  prestart.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_data.json  user_data.json
alembic/: env.py
alembic/versions/: 2025_10_10_1606-e3013f820413_initial_commit.py  2025_10_10_1618-6707c66f91de_base_commit.py  2025_10_10_1636-f5d761324243_adding_data.py
auth/routes/: jwt_auth.py
auth/services/: cookie_auth.py  validation.py
auth/utils/: helper.py  utils.py
core/: models.py  setup.py
database/queries/: __init__.py  data_handler.py
employee/models/: employee.py
employee/routes/: employee.py
employee/services/: employee.py
note/models/: note.py
note/routes/: note.py
note/schemas/: note.py
note/services/: __init__.py  note.py
project/models/: project.py
project/routes/: project.py
project/schemas/: project.py
project/services/: project.py
relation/models/: relation.py
relation/schemas/: __init__.py  relations.py
relation/services/: __init__.py  data_helper.py
src/alembic/: env.py
src/alembic/versions/: 2025_10_10_1606-e3013f820413_initial_commit.py  2025_10_10_1618-6707c66f91de_base_commit.py  2025_10_10_1636-f5d761324243_adding_data.py
src/api/: v1_group.py
src/api/v1/auth/: jwt_auth.py  utils.py
src/api/v1/routers/: employee.py  notes.py  projects.py  tasks.py
src/database/connections/: db_models.py  db_setup.py
src/database/queries/: __init__.py  data_handler.py  data_helper.py  employee.py  employee_queries.py  note.py  note_queries.py  project.py  project_queries.py  task.py  task_queries.py
src/models/: employee_models.py  note_models.py  relation_models.py  task_models.py
src/routers/: employee.py  notes.py  projects.py  tasks.py
src/schemas/: employee.py  project.py  relations.py  task.py
src/tests/: conftest.py
task/models/: task.py
task/routes/: task.py
task/schemas/: __init__.py  task.py
task/services/: task.py
tests/: conftest.py  test_handlers.py
(+3 files in other folders)
