[project]
name = "projecthandler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncpg==0.30.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "psycopg==3.2.12",
    "pyjwt[crypto]==2.10.1",
    "bcrypt==5.0.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "cryptography==46.0.3",
    "httpcore==1.0.9",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "pycparser==2.23",
    "iniconfig==2.3.0",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-dotenv==0.5.2",
    "ruff==0.12.11",
]

[project.optional-dependencies]
dev = [
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "pathspec==0.12.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "ruff==0.12.11",
]


[tool.mypy]
python_version = "3.13"
[[tool.mypy.overrides]]
module = [
    "routers.db_conn.queries_package",
    "routers.db_conn.queries_package.*"
]
ignore_missing_imports = true
ignore_errors = true 

[tool.taskipy.tasks]
export-reqs = "uv pip compile pyproject.toml -o requirements.txt && uv pip compile pyproject.toml --extra dev -o requirements-dev.txt"
export-prod = "uv pip compile pyproject.toml -o requirements.txt"
export-dev = "uv pip compile pyproject.toml --extra dev -o requirements-dev.txt"

[tool.taskipy.settings]
override_path = false
